force-app/main/default/objects/Contact/fields/Mobile_Number__c.field-meta.xml
<CustomField>
    <fullName>Mobile_Number__c</fullName>
    <label>Mobile Number</label>
    <required>true</required>
    <type>Phone</type>
</CustomField>