force-app/main/default/objects/Contact/fields/Shipping_Address__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Address__c</fullName>
    <label>Shipping Address</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>